Projects page template

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -67,8 +67,13 @@ body {
 
   #main-content {
     width: 100%;
+    margin-left: 4em;
+    margin-top: 6em;
   }
 
+  .panel-margin {
+    margin: 2em;
+  }
 }
 
 
