--- a/src/css/global.css
+++ b/src/css/global.css
@@ -43,6 +43,10 @@ body #sidebar {
         background-color: #4CAF50;
         color: white; }
 body #main-content {
-  width: 100%; }
+  width: 100%;
+  margin-left: 2em;
+  margin-top: 6em; }
+body .panel-margin {
+  margin: 2em; }
 
-/*# sourceMappingURL=header.css.map */
+/*# sourceMappingURL=global.css.map */
