--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -1,12 +1,11 @@
 $gray: #343434;
 
 body {
-  background-image: url("../img/background.png");
+  background-image: url("../img");
   background-size: cover;
   background-repeat: no-repeat;
 
   #credentials input  {
-    display: block;
     margin: auto;
   }
 
@@ -16,13 +15,9 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    padding: 4em;
-    border-style: solid;
-    border-width: 0.5em;
 
     a {
-      margin: 1em;
-      color: white;
+      color: black;
     }
   }
 }
