--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -1,16 +1,22 @@
 body {
-  background-image: url("../img");
+  background-image: url("../img/background.png");
   background-size: cover;
   background-repeat: no-repeat; }
-  body #credentials input {
-    margin: auto; }
-  body #login {
+  body div#login {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
-    body #login a {
-      color: black; }
+    body div#login a {
+      color: black;
+      margin: 0.5em; }
+    body div#login input[type=text] {
+      margin: 0.5em;
+      box-sizing: border-box;
+      border: 0.1em solid #343434;
+      border-radius: 0.5em;
+      width: 50%;
+      height: 2.5em; }
 
 /*# sourceMappingURL=landing.css.map */
