--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -1,15 +1,11 @@
 $gray: #343434;
 
 body {
-  background-image: url("../img");
+  background-image: url("../img/background.png");
   background-size: cover;
   background-repeat: no-repeat;
 
-  #credentials input  {
-    margin: auto;
-  }
-
-  #login {
+  div#login {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -18,6 +14,17 @@ body {
 
     a {
       color: black;
+      margin: 0.5em;
     }
+
+    input[type=text] {
+      margin: 0.5em;
+      box-sizing: border-box;
+      border: 0.1em solid $gray;
+      border-radius: 0.5em;
+      width: 50%;
+      height: 2.5em;
+    }
+
   }
 }
