--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -45,7 +45,7 @@ body {
         a {
           display: block;
           color: $gray;
-          padding: 12px 20px;
+          padding: 0.5em 0.5em;
           text-decoration: none;
           font-size: 35px;
         }
