--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -6,11 +6,10 @@ body {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 20%);
     text-align: center; }
     body div#login a {
-      color: black;
-      margin: 0.5em; }
+      color: black; }
     body div#login input[type=text] {
       margin: 0.5em;
       box-sizing: border-box;
