--- a/src/css/searchResults.css
+++ b/src/css/searchResults.css
@@ -17,7 +17,7 @@ body {
 	background-color: #fcfcfc;
 }
 .panel .btn-group {
-	margin: 15px 0 30px;
+	margin: 1em 0 2em;
 }
 .panel .btn-group .btn {
 	transition: background-color .3s ease;
@@ -31,7 +31,7 @@ body {
 	background-color: #eee;
 }
 .table-filter tbody tr td {
-	padding: 10px;
+	padding: .8em;
 	vertical-align: middle;
 	border-top-color: #eee;
 }
@@ -39,26 +39,27 @@ body {
 	background-color: #eee;
 }
 .table-filter tr td:first-child {
-	width: 38px;
+	width: 2em;
 }
 .table-filter tr td:nth-child(2) {
-	width: 35px;
+	width: 1.9em;
 }
 .table-filter .media-photo {
-	width: 45px;
-	height: 45px;
-	margin-bottom: 10px;
+	width: 4.3em;
+	height: 4.3em;
+	margin-top: .4em;
+	margin-bottom: 1em;
 }
 .table-filter .media-body {
     display: inline;
 }
 .table-filter .media-meta {
-	font-size: 11px;
+	font-size: .8em;
 	color: #999;
 }
 .table-filter .media .title {
-	color: #2BBCDE;
-	font-size: 14px;
+	color: #16a085;
+	font-size: 1.15em;
 	font-weight: bold;
 	line-height: normal;
 	margin: 0;
@@ -74,18 +75,16 @@ body {
 	color: #f0ad4e;
 }
 .table-filter .media .summary {
-	font-size: 14px;
+	font-size: 1em;
 }
-
-.location{
+.location > *, .email > *, .collaborators > *, .state > *{
+	font-size: 1em;
 	display: inline-block;
-	margin-right:10px;
+	margin-right:2px;
 }
-
-.email{
-	display: inline-block;
+.info{
+	margin-top: 5px;
 }
-
 
 table { 
 	table-layout:fixed;
