--- a/src/css/project.scss
+++ b/src/css/project.scss
@@ -29,3 +29,35 @@
 #task-list {
   margin: 2em 0em;
 }
+
+#custom-search-input{
+    padding: 3px;
+    border: solid 1px #E4E4E4;
+    border-radius: 6px;
+    background-color: #fff;
+
+    input{
+      border: 0;
+      box-shadow: none;
+    }
+
+    button.btn-info {
+      margin: 2px 0 0 0;
+      background: none;
+      box-shadow: none;
+      border: 0;
+      color: #666666;
+      padding: 0 8px 0 10px;
+      border-left: solid 1px #ccc;
+
+      &:hover {
+        border: 0;
+        box-shadow: none;
+        border-left: solid 1px #ccc;
+      }
+    }
+
+    .glyphicon-search {
+      font-size: 23px;
+    }
+}
