--- a/src/css/milestones.css
+++ b/src/css/milestones.css
@@ -1,14 +1,1 @@
-
-.progress {
-  margin-top: 2em;
-  text-align: center;
-}
-.progress .progress-value {
-  position: absolute;
-  right: 0;
-  left: 0;
-}
-.col-md-12{
-margin-bottom: 1em;
-}
-
+.progress{margin-top:2em;text-align:center}.progress .progress-value{position:absolute;right:0;left:0}.col-md-12{margin-bottom:1em}
