--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -5,38 +5,51 @@ body {
   -moz-background-size: cover;
   background-size: cover; }
   body .container #logo {
-    transform: translate(-160%, 20%);
-    top: 50%;
-    left: 50%;
+    transform: translate(25%, 25%);
+    top: 0%;
+    left: 0%;
     position: fixed; }
   body .container #search-bar {
-    transform: translate(75%, -50%);
-    margin-top: 40em;
-    background-image: url("../assets/searchicon.png");
-    background-position: 10px 10px;
-    background-repeat: no-repeat;
-    padding-left: 40px; }
-  body .container div#login {
-    background: rgba(1, 117, 96, 0.3);
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -80%);
-    text-align: center;
-    padding-bottom: 3em;
-    padding-top: 3em;
-    border-width: medium;
-    border-style: solid;
-    border-color: white; }
-    body .container div#login a {
-      color: white;
-      font-size: 1.5em; }
-  body .container input[type=text] {
+    transform: translate(50%, 50%);
+    margin-top: 10em; }
+  body .container input {
     margin: 0.5em;
     box-sizing: border-box;
     border: 0.1em solid #343434;
     border-radius: 0.5em;
     width: 50%;
     height: 2.5em; }
+  body .container #sign {
+    transform: translate(33em, 35em);
+    border-color: white;
+    border-width: medium;
+    color: white;
+    background: rgba(1, 117, 82, 0.7);
+    width: 20%;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em; }
+
+.nav-tabs {
+  margin-bottom: 15px; }
+
+.sign-with {
+  margin-top: 25px;
+  padding: 20px; }
+
+div#OR {
+  height: 30px;
+  width: 30px;
+  border: 1px solid #C2C2C2;
+  border-radius: 50%;
+  font-weight: bold;
+  line-height: 28px;
+  text-align: center;
+  font-size: 12px;
+  float: right;
+  position: absolute;
+  right: -16px;
+  top: 40%;
+  z-index: 1;
+  background: #DFDFDF; }
 
 /*# sourceMappingURL=landing.css.map */
