--- a/src/css/search_results.css
+++ b/src/css/search_results.css
@@ -1,1 +1,91 @@
-body{font-family:'Open Sans', sans-serif;color:#353535}.content h1{text-align:center}.content .content-footer p{color:#6d6d6d;font-size:12px;text-align:center}.content .content-footer p a{color:inherit;font-weight:bold}.panel{border:1px solid #ddd;background-color:#fcfcfc}.panel .btn-group{margin:15px 0 30px}.panel .btn-group .btn{transition:background-color .3s ease}.table-filter{background-color:#fff;border-bottom:1px solid #eee}.table-filter tbody tr:hover{cursor:pointer;background-color:#eee}.table-filter tbody tr td{padding:10px;vertical-align:middle;border-top-color:#eee}.table-filter tbody tr.selected td{background-color:#eee}.table-filter tr td:first-child{width:38px}.table-filter tr td:nth-child(2){width:35px}.table-filter .media-photo{width:35px}.table-filter .media-body{display:inline}.table-filter .media-meta{font-size:11px;color:#999}.table-filter .media .title{color:#2BBCDE;font-size:14px;font-weight:bold;line-height:normal;margin:0}.table-filter .media .title span{font-size:.8em;margin-right:20px}.table-filter .media .title span.user{color:#5cb85c}.table-filter .media .title span.project{color:#f0ad4e}.table-filter .media .summary{font-size:14px}table{table-layout:fixed}
+/*    --------------------------------------------------
+      :: General
+      -------------------------------------------------- */
+body {
+	font-family: 'Open Sans', sans-serif;
+	color: #353535;
+}
+.content h1 {
+	text-align: center;
+}
+
+/*	--------------------------------------------------
+	:: Table Filter
+	-------------------------------------------------- */
+.panel {
+	border: 1px solid #ddd;
+	background-color: #fcfcfc;
+}
+.panel .btn-group {
+	margin: 1em 0 2em;
+}
+.panel .btn-group .btn {
+	transition: background-color .3s ease;
+}
+.table-filter {
+	background-color: #fff;
+	border-bottom: 1px solid #eee;
+}
+.table-filter tbody tr:hover {
+	cursor: pointer;
+	background-color: #eee;
+}
+.table-filter tbody tr td {
+	padding: .8em;
+	vertical-align: middle;
+	border-top-color: #eee;
+}
+.table-filter tbody tr.selected td {
+	background-color: #eee;
+}
+.table-filter tr td:first-child {
+	width: 2em;
+}
+.table-filter tr td:nth-child(2) {
+	width: 1.9em;
+}
+.table-filter .media-photo {
+	width: 4.3em;
+	height: 4.3em;
+	margin-top: .4em;
+	margin-bottom: 1em;
+}
+.table-filter .media-body {
+    display: inline;
+}
+.table-filter .media-meta {
+	font-size: .8em;
+	color: #999;
+}
+.table-filter .media .title {
+	color: #16a085;
+	font-size: 1.15em;
+	font-weight: bold;
+	line-height: normal;
+	margin: 0;
+}
+.table-filter .media .title span {
+	font-size: .8em;
+	margin-right: 20px;
+}
+.table-filter .media .title span.user {
+	color: #5cb85c;
+}
+.table-filter .media .title span.project {
+	color: #f0ad4e;
+}
+.table-filter .media .summary {
+	font-size: 1em;
+}
+.location > *, .email > *, .collaborators > *, .state > *{
+	font-size: 1em;
+	display: inline-block;
+	margin-right:2px;
+}
+.info{
+	margin-top: 5px;
+}
+
+table { 
+	table-layout:fixed;
+}
