profile mobile updates; minor fixes on global.scss

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -2,6 +2,11 @@ $gray: #343434;
 $main-color: #017552;
 
 body {
+  /* make scrollbar invisible*/
+  ::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+  }
 
   nav#header {
     background-color: $gray;
@@ -25,7 +30,6 @@ body {
   #parent {
     height: 100%;
     margin-top: 3.5em;
-    margin-left: 2em;
   }
 
   #header {
