--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,5 +1,5 @@
 $white: #ffffff;
-$dark-white: #e4e4e4;
+$dark-white: #d7d7d7;
 $gray: #666666;
 $dark-gray: #222222;
 $green: #237A57;
@@ -36,6 +36,14 @@ nav#mainNav {
   background: $dark-green; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, $dark-green, $green); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, $dark-green, $green); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+#signinup {
+  color: $dark-white;
+}
+
+#signinup:hover {
+  color: $white;
 }
 
 #search {
