--- a/src/css/project_forum.scss
+++ b/src/css/project_forum.scss
@@ -1,80 +1,57 @@
-body {
-  font-family: 'Open Sans', sans-serif;
-  color: #353535; }
+.forum{
+  margin: 1.3em 0;
+  background-color: #FFFFFF;
+  padding: 1em;
+}
 
-.content h1 {
-  text-align: center; }
 
-.content .content-footer p {
-  color: #6d6d6d;
-  font-size: 12px;
-  text-align: center; }
+.forum_header{
+  .back{
+    z-index: 1;
+    margin-top: 1.7em;
+    a{
+     color: #16a085;
+   }
+ }
 
-.content .content-footer p a {
-  color: inherit;
-  font-weight: bold; }
+ .title > *{
+  display: inline-block;
+  color: #16a085;
+}
+#new_post_btn{
+  margin-top: 1.4em;
+  border-color: #3AA08B;
+  border-radius: 5%;
+}
 
-.panel {
-  border: 1px solid #ddd;
-  background-color: #fcfcfc; }
+#new_post_btn:hover{
+  background-color:#16a085 !important;
+  color: #FFFFFF !important;
+}
 
-.panel .btn-group {
-  margin: 15px 0 30px; }
+.search-input-group{
+  margin-top: 1.4em;
+}
+.search-input-group .input-group-addon{
+  background: white !important; 
+}
+.search-input-group .form-control{
+  border-right:0; 
+  box-shadow:0 0 0; 
+  border-color:#ccc;
+}
+.search-input-group button{
+  border:0;
+  background:transparent;
+  color: #16a085;
+}
 
-.panel .btn-group .btn {
-  transition: background-color .3s ease; }
+}
 
-.table-filter {
-  background-color: #fff;
-  border-bottom: 1px solid #eee; }
-
-.table-filter tbody tr:hover {
-  cursor: pointer;
-  background-color: #eee; }
-
-.table-filter tbody tr td {
-  padding: 10px;
-  vertical-align: middle;
-  border-top-color: #eee; }
-
-.table-filter tbody tr.selected td {
-  background-color: #eee; }
-
-.table-filter tr td:first-child {
-  width: 38px; }
-
-.table-filter tr td:nth-child(2) {
-  width: 35px; }
-
-.table-filter .media-photo {
-  width: 35px; }
-
-.table-filter .media-body {
-  display: inline; }
-
-.table-filter .media-meta {
-  font-size: 11px;
-  color: #999; }
-
-.table-filter .media .title {
-  color: #2BBCDE;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: normal;
-  margin: 0; }
-
-.table-filter .media .title span {
-  font-size: .8em;
-  margin-right: 20px; }
-
-.table-filter .media .title span.user {
-  color: #5cb85c; }
-
-.table-filter .media .title span.project {
-  color: #f0ad4e; }
-
-.table-filter .media .summary {
-  font-size: 14px; }
+.table{
+ margin-top: 2em;
+}
 
 table {
-  table-layout: fixed; }
+  table-layout: fixed;
+}
