--- a/src/css/project_dashboard.scss
+++ b/src/css/project_dashboard.scss
@@ -163,7 +163,7 @@ body {
   margin-top: 2em;
 }
 
-.stat_title > *, .collab_title > *{
+.stat_title > *, .collab_title > *, .tasks_title > *, .milestones_title > *{
   display: inline-block;
   color: #3AA08B;
   margin-bottom: 1em;
@@ -232,6 +232,27 @@ body {
 }
 
 #new_collab_btn:hover{
+  background-color:#16a085 !important;
+  color: #FFFFFF !important;
+}
+
+#create_milestone{
+  margin-top: 1em;
+  border-color: #3AA08B;
+  border-radius: 5%;
+}
+
+#create_milestone:hover{
+  background-color:#16a085 !important;
+  color: #FFFFFF !important;
+}
+
+#create-task{
+  border-color: #3AA08B;
+  border-radius: 5%;
+}
+
+#create-task:hover{
   background-color:#16a085 !important;
   color: #FFFFFF !important;
 }
