forgot settings tab in previous commit

--- a/src/css/project_dashboard.scss
+++ b/src/css/project_dashboard.scss
@@ -163,7 +163,7 @@ body {
   margin-top: 2em;
 }
 
-.stat_title > *, .collab_title > *, .tasks_title > *, .milestones_title > *{
+.stat_title > *, .collab_title > *, .tasks_title > *, .milestones_title > *, .settings_title > *{
   display: inline-block;
   color: #3AA08B;
   margin-bottom: 1em;
