--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -47,22 +47,24 @@ nav#mainNav {
   color: $white;
 }
 
-.search-input-group{
+.search-input-group {
   padding: 0.6em;
 }
 
-.search-input-group .input-group-addon{
+.search-input-group .input-group-addon {
   border-radius: 0em;
   background: white !important;
 }
-.search-input-group .form-control{
+
+.search-input-group .form-control {
   border-right: 0;
-  box-shadow:0 0 0;
-  border-color:#ccc;
+  box-shadow: 0 0 0;
+  border-color: #ccc;
 }
-.search-input-group button{
-  border:0;
-  background:transparent;
+
+.search-input-group button {
+  border: 0;
+  background: transparent;
   color: #16a085;
 }
 
@@ -148,5 +150,61 @@ nav#mainNav {
   }
 }
 
+#login-btn {
+  border-radius: 0.3em;
+  margin-bottom: 0.7em;
+}
+
+/*GOOGLE LOGIN BTN*/
+
+.loginBtn {
+  box-sizing: border-box;
+  position: relative;
+  padding: 0px 15px 0 46px;
+  border: none;
+  text-align: left;
+  line-height: 34px;
+  white-space: nowrap;
+  border-radius: 0.3em;
+  font-size: 16px;
+  color: $white;
+  margin-bottom: 0.7em;
+  height: 2em;
+  width: 100%;
+}
+
+.loginBtn:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 34px;
+  height: 100%;
+}
+
+.loginBtn:focus {
+  outline: none;
+}
+
+.loginBtn:active {
+  box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1);
+}
+
+/* Google */
+.loginBtn--google {
+  font-family: "Roboto", Roboto, arial, sans-serif;
+  background: #DD4B39;
+}
+
+.loginBtn--google:before {
+  border-right: #BB3F30 1px solid;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
+}
+
+.loginBtn--google:hover,
+.loginBtn--google:focus {
+  background: #E74B37;
+}
 
 
