--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -33,12 +33,20 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: $green;
+  color: $dark-green;
+}
+
+a#link {
+  color: $dark-white;
 }
 
 a:hover,
 a:focus {
   color: $dark-green;
+}
+
+i{
+  color: #36bc86;
 }
 
 h1,
@@ -48,17 +56,24 @@ h4,
 h5,
 h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  color: $white;
 }
 
 p {
   font-size: 16px;
   line-height: 1.5;
   margin-bottom: 20px;
+  color: $dark-white;
+}
+
+p.text-muted {
+  color: $dark-white;
 }
 
 .bg-primary {
-  background-color: $white;
-  color: $dark-gray;
+  margin-top: 10em;
+  background-color: $green;
+  color: $dark-green;
 }
 
 .bg-dark {
@@ -67,7 +82,7 @@ p {
 }
 
 .text-faded {
-  color: $dark-white;
+  color: $dark-gray;
 }
 
 section {
@@ -487,11 +502,7 @@ body {
 
 /*SCROLL ARROW*/
 #arrow {
-  background: url(http://www.nxworld.net/codepen/css-scroll-down-button/bg05.jpg) center center / cover no-repeat;
-}
-
-#arrow a {
-  padding-top: 70px;
+  padding-top: 7em;
 }
 
 #arrow a span {
@@ -535,4 +546,83 @@ body {
     transform: rotate(-45deg) translate(-20px, 20px);
     opacity: 0;
   }
+}
+
+#login-btn {
+  border-radius: 0.3em;
+  margin-bottom: 0.7em;
+}
+
+/*GOOGLE LOGIN BTN*/
+
+.loginBtn {
+  box-sizing: border-box;
+  position: relative;
+  padding: 0px 15px 0 46px;
+  border: none;
+  text-align: left;
+  line-height: 34px;
+  white-space: nowrap;
+  border-radius: 0.3em;
+  font-size: 16px;
+  color: $white;
+  margin-bottom: 0.7em;
+  height: 2em;
+  width: 100%;
+}
+.loginBtn:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 34px;
+  height: 100%;
+}
+.loginBtn:focus {
+  outline: none;
+}
+.loginBtn:active {
+  box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
+}
+
+/* Google */
+.loginBtn--google {
+  font-family: "Roboto", Roboto, arial, sans-serif;
+  background: #DD4B39;
+}
+.loginBtn--google:before {
+  border-right: #BB3F30 1px solid;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
+}
+.loginBtn--google:hover,
+.loginBtn--google:focus {
+  background: #E74B37;
+}
+
+/*SEARCH*/
+div.row {
+  top: 0;
+  left:0;
+}
+
+.search-input-group {
+  padding: 0.6em;
+}
+
+.search-input-group .input-group-addon {
+  border-radius: 0em;
+  background: white !important;
+}
+
+.search-input-group .form-control {
+  border-right: 0;
+  box-shadow: 0 0 0;
+  border-color: #ccc;
+}
+
+.search-input-group button {
+  border: 0;
+  background: transparent;
+  color: #16a085;
 }
