--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -4,6 +4,7 @@ $gray: #666666;
 $dark-gray: #222222;
 $green: #237A57;
 $dark-green: #093028;
+$light-green: #00be75;
 
 html,
 body {
@@ -12,21 +13,13 @@ body {
   background: $dark-green; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, $dark-green, $green); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, $dark-green, $green); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-}
-
-body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Arial";
 }
 
 hr {
-  border-color: $green;
+  border-color: $light-green;
   border-width: 3px;
   max-width: 50px;
-}
-
-hr.light {
-  border-color: $white;
 }
 
 a {
@@ -45,8 +38,8 @@ a:focus {
   color: $dark-green;
 }
 
-i{
-  color: #36bc86;
+#icon {
+  color: $light-green;
 }
 
 h1,
@@ -55,14 +48,13 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   color: $white;
 }
 
-p {
-  font-size: 16px;
+p#link {
+  font-size: 200px;
   line-height: 1.5;
-  margin-bottom: 20px;
+  margin-bottom: 2em;
   color: $dark-white;
 }
 
@@ -70,40 +62,26 @@ p.text-muted {
   color: $dark-white;
 }
 
-.bg-primary {
-  margin-top: 10em;
-  background-color: $green;
-  color: $dark-green;
-}
+.bg-section {
+  color: $dark-white;
+  font-size: 16px;
+  margin: 0.5em;
 
-.bg-dark {
-  background-color: $dark-gray;
-  color: $white;
-}
-
-.text-faded {
-  color: $dark-gray;
+  p {
+    margin-bottom: 50px;
+  }
 }
 
 section {
-  padding: 100px 0;
+  padding: 5em 0;
   position: relative;
   width: 100%;
   height: 100%;
 }
 
-aside {
-  padding: 50px 0;
-}
-
-.no-padding {
-  padding: 0;
-}
-
 .navbar-default {
   background-color: $white;
   border-color: $dark-gray;
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -111,7 +89,6 @@ aside {
 
 .navbar-default .navbar-header .navbar-brand {
   color: $green;
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -312,7 +289,6 @@ header .header-content .header-content-inner p {
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   padding: 0 15px;
 }
 
@@ -463,7 +439,6 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .btn {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   border: none;
   border-radius: 300px;
   font-weight: 700;
@@ -501,8 +476,8 @@ body {
 }
 
 /*SCROLL ARROW*/
-#arrow {
-  padding-top: 7em;
+div#arrow{
+  padding-top: 5em;
 }
 
 #arrow a span {
@@ -511,8 +486,8 @@ body {
   width: 24px;
   height: 24px;
   margin-left: -12px;
-  border-left: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border-left: 1px solid $white;
+  border-bottom: 1px solid $white;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   -webkit-animation: arrow 1.5s infinite;
@@ -588,7 +563,6 @@ body {
 
 /* Google */
 .loginBtn--google {
-  font-family: "Roboto", Roboto, arial, sans-serif;
   background: #DD4B39;
 }
 .loginBtn--google:before {
@@ -612,17 +586,19 @@ div.row {
 
 .search-input-group .input-group-addon {
   border-radius: 0em;
-  background: white !important;
+  background: transparent !important;
 }
 
 .search-input-group .form-control {
   border-right: 0;
   box-shadow: 0 0 0;
-  border-color: #ccc;
+  border-color: $dark-white;
+  background: transparent !important;
+  color: $dark-white;
 }
 
 .search-input-group button {
   border: 0;
   background: transparent;
-  color: #16a085;
+  color: $light-green;
 }
