--- a/src/css/profile.scss
+++ b/src/css/profile.scss
@@ -7,7 +7,7 @@ body {
 
 /* Profile container */
 .profile {
-  margin: 6em 0 2em 0;
+  margin: 0.5em 0 2em 0;
 }
 
 /* Profile sidebar */
@@ -239,6 +239,8 @@ body {
 #new_proj_btn{
   margin-top: 1em;
   border-color: #3AA08B;
+  background-color: #F2F2F2;
+  color: #16a085;
   border-radius: 5%;
 }
 
@@ -281,4 +283,46 @@ body {
 
 
   }
+}
+
+
+
+/* New Project Form */
+#createProjectModalContent{
+  margin-top: 7em;
+  padding:1em;
+  border-radius: 2%; 
+}
+
+
+.modal-title{
+  text-align: center;
+  color: #16a085;
+  font-weight: bold;
+}
+
+.projectStateGroup{
+  margin-top: 1em;
+}
+
+#select_State{
+  margin-top: .2em;
+}
+
+#customState{
+  margin-top: .2em;
+  border-color: #FFFFFF;
+  border-radius: 0;
+  width: 100%;
+  padding-left: .5em;
+}
+
+#customState:disabled{
+  background: #BDBDBD;
+  border-color: #D8D8D8;
+}
+
+
+.create_in_modal{
+  margin-left: 2em;
 }
