--- a/src/css/project_dashboard.scss
+++ b/src/css/project_dashboard.scss
@@ -6,7 +6,7 @@ body {
 
 /* project container */
 .project {
-  margin: 6em 0 2em 0;
+  margin: 0.5em 0 2em 0;
 }
 
 /* project sidebar */
@@ -214,7 +214,7 @@ body {
     margin-right: 20px;
 
     &.coordinator {
-      color: #FF6138;
+      color: #FF611A;
     }
   }
 
