Finish create project stub

--- a/css/profile.scss
+++ b/css/profile.scss
@@ -14,18 +14,18 @@ body {
 .profile-sidebar {
   padding: 1.3em 0 .7em 0;
   background: #FFFFFF;
-  border-radius: 2%; 
+  border-radius: 2%;
   margin-bottom: 1em;
 }
 
 .profile-sidebar-mobile {
   padding: 1.3em 0 .7em 0;
   background: #FFFFFF;
-  border-radius: 2%; 
+  border-radius: 2%;
   margin-bottom: 1em;
 
   .profile-userpic img {
-    
+
     width: 6em;
     height: 6em;
   }
@@ -116,7 +116,7 @@ body {
   padding: 1.3em;
   background: #FFFFFF;
   min-height: 28.75em;
-  border-radius: 1.5%; 
+  border-radius: 1.5%;
 }
 
 
@@ -222,7 +222,7 @@ body {
     color: #FFFFFF !important;
   }
 
-  
+
 }
 
 .popular_title {
@@ -249,7 +249,7 @@ body {
   color: #FFFFFF !important;
 }
 
-.stats_row > *{   
+.stats_row > *{
   margin-bottom: .5em;
 
   i{
@@ -291,7 +291,7 @@ body {
 #createProjectModalContent{
   margin-top: 7em;
   padding:1em;
-  border-radius: 2%; 
+  border-radius: 2%;
 }
 
 
@@ -305,7 +305,7 @@ body {
   margin-top: 1em;
 }
 
-#select_State{
+#select-state{
   margin-top: .2em;
 }
 
