--- a/css/header.scss
+++ b/css/header.scss
@@ -51,6 +51,7 @@ nav#mainNav {
   background-color: inherit;
   margin: 10px 15px 0.9em 0;
   color: $dark-white;
+  font-size: 14px;
 }
 
 #logout:hover {
