--- a/css/project_dashboard.scss
+++ b/css/project_dashboard.scss
@@ -1,3 +1,10 @@
+$white: #ffffff;
+$dark-white: #d7d7d7;
+$gray: #666666;
+$dark-gray: #222222;
+$green: #237A57;
+$dark-green: #093028;
+
 body {
   background: #093028; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #093028 , #237A57); /* Chrome 10-25, Safari 5.1-6 */
@@ -228,34 +235,13 @@ body {
 }
 }
 
-#new_collab_btn{
+#proj_btn{
   margin-top: 1em;
   border-color: #3AA08B;
   border-radius: 5%;
 }
 
-#new_collab_btn:hover{
-  background-color:#16a085 !important;
-  color: #FFFFFF !important;
-}
-
-#create_milestone{
-  margin-top: 1em;
-  border-color: #3AA08B;
-  border-radius: 5%;
-}
-
-#create_milestone:hover{
-  background-color:#16a085 !important;
-  color: #FFFFFF !important;
-}
-
-#create-task{
-  border-color: #3AA08B;
-  border-radius: 5%;
-}
-
-#create-task:hover{
+#proj_btn:hover{
   background-color:#16a085 !important;
   color: #FFFFFF !important;
 }
