--- a/css/project_dashboard.scss
+++ b/css/project_dashboard.scss
@@ -245,3 +245,13 @@ body {
   background-color:#16a085 !important;
   color: #FFFFFF !important;
 }
+
+#icon_btn {
+  background-color: transparent !important;
+  color: #3AA08B !important;
+  font-size: 24px;
+}
+
+#icon_btn:hover {
+  color: #45bea5 !important;
+}
