--- a/lib/bootstrap-datepicker-1/css/bootstrap-datepicker.css
+++ b/lib/bootstrap-datepicker-1/css/bootstrap-datepicker.css
@@ -10,7 +10,8 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  direction: ltr;
+  direction: rtl;
+  margin-top: 90px; !important;
 }
 .datepicker-inline {
   width: 220px;
@@ -19,7 +20,7 @@
   direction: rtl;
 }
 .datepicker.datepicker-rtl table tr td span {
-  float: right;
+  float: left; !important;
 }
 .datepicker-dropdown {
   top: 0;
@@ -286,16 +287,16 @@
 .datepicker table tr td.active:hover,
 .datepicker table tr td.active.disabled,
 .datepicker table tr td.active.disabled:hover {
-  background-color: #006dcc;
-  background-image: -moz-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: -ms-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#0044cc));
-  background-image: -webkit-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: -o-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: linear-gradient(to bottom, #08c, #0044cc);
+  background-color: #237A57;
+  background-image: -moz-linear-gradient(to bottom, #237A57, #45bea5);
+  background-image: -ms-linear-gradient(to bottom, #237A57, #45bea5);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#237A57), to(#45bea5));
+  background-image: -webkit-linear-gradient(to bottom, #237A57, #45bea5);
+  background-image: -o-linear-gradient(to bottom, #237A57, #45bea5);
+  background-image: linear-gradient(to bottom, #237A57, #45bea5);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#08c', endColorstr='#0044cc', GradientType=0);
-  border-color: #0044cc #0044cc #002a80;
+  border-color: #237A57 #45bea5 #093028;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
   color: #fff;
