edited profile settings; added sidebar on forum; edited project settings

--- a/css/project_dashboard.scss
+++ b/css/project_dashboard.scss
@@ -255,3 +255,10 @@ body {
 #icon_btn:hover {
   color: #45bea5 !important;
 }
+
+.projectVisibility{
+  margin-bottom:1em;
+}
+.btn-danger{
+  margin-left:1em;
+}
