--- a/css/profile.scss
+++ b/css/profile.scss
@@ -30,10 +30,6 @@ body {
     height: 6em;
   }
 
-  .info{
-    margin-top: .5em;
-  }
-
 }
 .menu_mobile_row{
   margin-bottom: .5em;
@@ -107,6 +103,34 @@ body {
   }
 }
 
+#accept_btn{
+  border-color: #3AA08B;
+  background-color: #F2F2F2;
+  color: #16a085;
+  border-radius: 5%;
+  display: inline;
+  margin: 2px;
+}
+
+#accept_btn:hover{
+  background-color:#16a085 !important;
+  color: #F2F2F2 !important;
+}
+
+#decline_btn{
+  border-color: #f55047;
+  background-color: #F2F2F2;
+  color: #f55047;
+  border-radius: 5%;
+  display: inline;
+  margin: 2px;
+}
+
+#decline_btn:hover{
+  background-color: #f55047 !important;
+  color: #F2F2F2 !important;
+}
+
 .profile-usermenu {
   margin-top: 2em;
 }
@@ -128,9 +152,6 @@ body {
 .location > *, .email > *, .collaborators > *, .state > *, .sender > *{
   font-size: 1em;
   display: inline-block;
-}
-.info{
-  margin-top: 5px;
 }
 
 .table-popular , .table-myproj {
